@@ -697,6 +697,13 @@ Clearly, choosing $f=0$ will yield the solution $abcde=563910$.  Furthermore, to
 </solution>
 </exercise>
 
+<exercise type="C" number="53" rough="Economist behavioral">
+<problem contributor="robertbeezer">An article in <i>The Economist</i> (<q>Free Exchange</q>, December 6, 2014) quotes the following problem as an illustration that some of the <q>underlying assumptions of classical economics</q> about people's behavior are incorrect and <q>the mind plays tricks.</q>  A bat and ball cost \$1.10 between them.  How much does each cost?  Answer this quickly with no writing, then construct system of linear equations and solve the problem carefully.
+</problem>
+<solution contributor="robertbeezer">A quick answer is often \$1.00 and 10 cents, rather than the correct answer, \$1.05 and 5 cents.
+</solution>
+</exercise>
+
 <exercise type="M" number="10" rough="4 ambiguous sentences">
 <problem contributor="robertbeezer">Each sentence below has at least two meanings.  Identify the source of the double meaning, and rewrite the sentence (at least twice) to clearly convey each meaning.
 <ol><li> They are baking potatoes.
