@@ -1,3 +1,7 @@
+v3.xx 2015/xx/xx
+~~~~~~~~~~~~~~~~
+New: Exercise SSLE.C53, a 2x2 system from The Economist
+
 v3.40 2014/12/12
 ~~~~~~~~~~~~~~~~
 Typo: Example LIP4, sign on  2\alpha_{3}x^2  term, twice (Albert Schueller)
